--- a/HomeAssistantServer/rootfs/etc/nginx/conf.d/default.conf
+++ b/HomeAssistantServer/rootfs/etc/nginx/conf.d/default.conf
@@ -10,5 +10,6 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
+		sub_filter 'href="/' 'href="/myapplication/';
     }
 }
