--- a/HomeAssistantServer/rootfs/etc/nginx/conf.d/default.conf
+++ b/HomeAssistantServer/rootfs/etc/nginx/conf.d/default.conf
@@ -10,6 +10,7 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
-		sub_filter 'href="/' 'href="';
+        sub_filter         'href="/' 'href="';
+        sub_filter_once off;
     }
 }
