--- a/HomeAssistantServer/rootfs/etc/nginx/conf.d/default.conf
+++ b/HomeAssistantServer/rootfs/etc/nginx/conf.d/default.conf
@@ -11,6 +11,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
         sub_filter         'href="/' 'href="';
+        sub_filter         'src="/' 'src="';
         sub_filter_once off;
     }
 }
