--- a/HomeAssistantServer/config.json
+++ b/HomeAssistantServer/config.json
@@ -9,6 +9,7 @@
   "ingress": true,
   "host_network": true,
   "privileged": ["NET_ADMIN","SYS_ADMIN", "SYS_RAWIO", "SYS_TIME", "SYS_NICE", "SYS_RESOURCE", "SYS_PTRACE", "SYS_MODULE","DAC_READ_SEARCH"],
+  "full_access": true,
   
   "startup": "before",
   "boot": "auto",
